--- a/Ejercicio_clase2_git.ipynb
+++ b/Ejercicio_clase2_git.ipynb
@@ -110,12 +110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oscar David Jaramillo\n"
+     ]
+    }
+   ],
    "source": [
     "# 2 - ejercicio 2\n",
-    "# Nombre"
+    "# Nombre\n",
+    "print('Oscar David Jaramillo')"
    ]
   },
   {
